src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TestAlternateContent.xaml
<StackPanel Name="StackPanel0" xmlns='http://schemas.microsoft.com/winfx/2006/xaml/presentation' xmlns:v1='http://ns.controlstore.com/avalon/2005' xmlns:v2='http://ns.controlstore.com/avalon/2007' xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
    <mc:AlternateContent>
        <mc:Choice Requires="v2" Name="v2choice">
            <v2:TransButton>This is a v2 button</v2:TransButton>
        </mc:Choice>
        <mc:Choice Requires="v1" Name="v1choice">
            <v1:TransButton>This is a v1 button</v1:TransButton>
        </mc:Choice>
        <mc:Fallback>
        </mc:Fallback>
    </mc:AlternateContent>
</StackPanel>
